build: update dependencies
- Update all dependencies with updates available
- Condition PublishAot in Lumafly.AU.csproj to only enable for windows (to prevent linux restore errors)
NOTE: NetSparkleUpdater was not updated due to restore errors

--- a/Lumafly.AU/Lumafly.AU.csproj
+++ b/Lumafly.AU/Lumafly.AU.csproj
@@ -10,7 +10,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
-        <PublishAot>true</PublishAot>
+        <PublishAot Condition="'$(RuntimeIdentifier)' == 'win-x64'">true</PublishAot>
         <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
         <DebugType>embedded</DebugType>
         <ApplicationManifest>app.manifest</ApplicationManifest>
