--- a/Lumafly/Lumafly.csproj
+++ b/Lumafly/Lumafly.csproj
@@ -26,30 +26,30 @@
     </ItemGroup>
     
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.0.4" />
-        <PackageReference Include="Avalonia.Controls.ItemsRepeater" Version="11.0.4" />
-        <PackageReference Include="Avalonia.Desktop" Version="11.0.4" />
-        <PackageReference Include="Avalonia.Diagnostics" Version="11.0.4" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.4" />
-        <PackageReference Include="Avalonia.Skia" Version="11.0.4" />
-        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.4" />
-        <PackageReference Include="Deadpikle.AvaloniaProgressRing" Version="0.10.1" />
+        <PackageReference Include="Avalonia" Version="11.3.11" />
+        <PackageReference Include="Avalonia.Controls.ItemsRepeater" Version="11.1.5" />
+        <PackageReference Include="Avalonia.Desktop" Version="11.3.11" />
+        <PackageReference Include="Avalonia.Diagnostics" Version="11.3.11" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.9" />
+        <PackageReference Include="Avalonia.Skia" Version="11.3.11" />
+        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.11" />
+        <PackageReference Include="Deadpikle.AvaloniaProgressRing" Version="0.10.11-preview20251127001" />
         <PackageReference Include="HPackage.Net" Version="1.0.1" />
-        <PackageReference Include="JetBrains.Annotations" Version="2023.2.0" />
-        <PackageReference Include="Markdown.Avalonia" Version="11.0.1" />
-        <PackageReference Include="MessageBox.Avalonia" Version="3.1.4" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.7.23375.6" />
+        <PackageReference Include="JetBrains.Annotations" Version="2025.2.4" />
+        <PackageReference Include="Markdown.Avalonia" Version="11.0.3-a1" />
+        <PackageReference Include="MessageBox.Avalonia" Version="3.3.1.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
         <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.1.2" />
-        <PackageReference Include="Mono.Cecil" Version="0.11.5" />
+        <PackageReference Include="Mono.Cecil" Version="0.11.6" />
         <PackageReference Include="NetSparkleUpdater.SparkleUpdater" Version="2.3.0-preview20230704001" />
         <PackageReference Include="NetSparkleUpdater.UI.Avalonia" Version="3.0.0-preview20230703001" />
-        <PackageReference Include="PropertyChanged.SourceGenerator" Version="1.0.8">
+        <PackageReference Include="PropertyChanged.SourceGenerator" Version="1.1.2">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" Version="14.7.1" />
-        <PackageReference Include="Svg.SourceGenerator.Skia" Version="1.0.0.1" />
-        <PackageReference Include="System.IO.Abstractions" Version="19.2.69" />
+        <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" Version="19.2.1" />
+        <PackageReference Include="Svg.SourceGenerator.Skia" Version="3.4.1" />
+        <PackageReference Include="System.IO.Abstractions" Version="22.1.0" />
     </ItemGroup>
 
     
