--- a/Lumafly/Lumafly.csproj
+++ b/Lumafly/Lumafly.csproj
@@ -36,13 +36,13 @@
         <PackageReference Include="Deadpikle.AvaloniaProgressRing" Version="0.10.11-preview20251127001" />
         <PackageReference Include="HPackage.Net" Version="1.0.1" />
         <PackageReference Include="JetBrains.Annotations" Version="2025.2.4" />
-        <PackageReference Include="Markdown.Avalonia" Version="11.0.3-a1" />
+        <PackageReference Include="ClassIsland.Markdown.Avalonia" Version="11.0.3.4" />
         <PackageReference Include="MessageBox.Avalonia" Version="3.3.1.1" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
         <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.1.2" />
         <PackageReference Include="Mono.Cecil" Version="0.11.6" />
-        <PackageReference Include="NetSparkleUpdater.SparkleUpdater" Version="2.3.0-preview20230704001" />
-        <PackageReference Include="NetSparkleUpdater.UI.Avalonia" Version="3.0.0-preview20230703001" />
+        <PackageReference Include="NetSparkleUpdater.SparkleUpdater" Version="3.0.4" />
+        <PackageReference Include="NetSparkleUpdater.UI.Avalonia" Version="3.0.4" />
         <PackageReference Include="PropertyChanged.SourceGenerator" Version="1.1.2">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
